# beer_lambda

./: Cargo.toml  Dockerfile  README.md  build.sh  custom-docker-build.sh  run.sh  test.sh
devops/: cloudformation.yml
src/: main.rs
src/whats_on_tap/: main.rs
