[package]
name = "test_rust_lambda"
version = "0.1.0"
authors = ["hirschb <benhirsch24@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.1"
log = "^0.4"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
simple_logger = "^1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
