[package]
name = "beer_lambda"
version = "0.1.0"
authors = ["hirschb <benhirsch24@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.25"
lambda_runtime = "0.1"
log = "^0.4"
rusoto_core = "0.36.0"
rusoto_credential = "0.15.0"
rusoto_dynamodb = "0.36.0"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
simple_logger = "^1"

[[bin]]
name = "whats_on_tap"
path = "src/whats_on_tap/main.rs"
